// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CFooter customize 1`] = `
<div>
  <div
    class="footer footer-fixed bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CFooter component 1`] = `
<div>
  <div
    class="footer"
  >
    Test
  </div>
</div>
`;
